deployment/k8s/webapp/base/istio/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lisa
spec:
  hosts:
    - placeholder
  gateways:
    - placeholder
  http:
    # Prevent API response caching
    - match:
        - uri:
            prefix: /api
      headers:
        response:
          add:
            Cache-Control: "no-cache, no-store, must-revalidate"
            Pragma: "no-cache"
            Expires: "0"
      route:
        - destination:
            host: lisa
            port:
              number: 80

    # Rule for root ("/") to prevent caching and add CSP header
    - match:
        - uri:
            exact: /
      headers:
        response:
          add:
            Cache-Control: "no-cache, no-store, must-revalidate"
            Pragma: "no-cache"
            Expires: "0"
            Content-Security-Policy: "placeholder"
      route:
        - destination:
            host: lisa
            port:
              number: 80

    # Rule for all other paths with the CSP header
    - match:
        - uri:
            prefix: /
      rewrite:
        uriRegexRewrite:
          match: ^/(/|$)(.*)
          rewrite: /\2
      route:
        - destination:
            host: lisa
            port:
              number: 80
          headers:
            response:
              add:
                Content-Security-Policy: "placeholder"
