deployment/k8s/webapp/base/istio/allow-ingress-authorization-policy.yaml

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-lisa-webapp
spec:
  selector:
    matchLabels:
      io.kompose.service: lisa
  action: ALLOW
  rules:
    - from:
        - source:
            principals : ["cluster.local/ns/istio-ingress/sa/istio-ingress"]
      to:
        - operation:
            methods: ["GET","POST","PUT"]
      when:
       - key: request.auth.claims[groups]
         values:
             - lisa_access
